Added up to chapter one, page 3

--- a/_slides/00-01.md
+++ b/_slides/00-01.md
@@ -1,20 +1,17 @@
 ---
 title: "Introduction"
-subtitle: "A Visual Guide to Income in America and How it is Taxed"
-color: red
+color: green
 page: chapter
 background: cover.jpg
 ---
-Every year, in the months leading up to April, Americans spend hours filing their income tax returns. As a result, most adult Americans are somewhat familiar with how the individual income tax works. In fact, the income tax code is one of the only parts of federal law that almost every American has dealt with personally.
+During the 2013 legislative session, North Carolina lawmakers adopted legislation fundamentally restructuring the state’s tax code. The package included tax cuts for both individuals and businesses, a simplified and more neutral tax system, and a revenue stream that is more reflective of the modern economy and better prepared to withstand economic swings. The reforms broadened, lowered, and flattened the individual income tax, reduced business taxes, moderately expanded the sales tax base, and repealed the estate tax.
 
-But filling out a tax return offers only a small glimpse of the entire federal income tax system – of nearly 150 million households, thousands of pages of laws and regulations, and over $1.5 trillion in tax payments. More importantly, the individual income tax creates economic and social consequences larger than any single tax return can reflect.
+In the two legislative sessions following the historic 2013 reforms, lawmakers made further improvements to the code, which will ultimately result in North Carolina having the 13th best structured tax code in the country once all changes are fully phased in, according to the State Business Tax Climate Index. These multi-year reforms had many moving parts, and while it’s important to view them as a cohesive unit, it is still valuable to understand the importance of each individual change made.
 
-In order for taxpayers to comprehend these consequences, the income tax needs to be examined from several angles: as a source of federal revenue, a tool for social welfare spending, a set of economic incentives, and a subject of policy debates.
+Through a series of charts and maps, North Carolina Illustrated: A Visual Guide to Tax Reform puts these reforms in perspective and provides insight on several key questions. First, what did North Carolina’s tax code look like before the reforms, in terms of the tax code but also in terms of the broader state economy? Second, what were the details of the tax changes, and how did they impact the state’s tax code? And finally, what can North Carolina do to further improve its tax code in the future to make it an even better place to live and do business?
 
-Understanding the income tax also requires context. Income in America looks different today than a few decades ago, due to demographic and economic forces. In addition, the federal income tax should be understood against the backdrop of the federal tax system as a whole and in comparison with income taxes around the world.
+This chart book aims to help readers understand the state’s tax system from a broad perspective. To do this, we review North Carolina in the context of six key competitor states: Florida, Georgia, Massachusetts, South Carolina, Texas, and Virginia. These states have similar economies to North Carolina in many respects and are competitors when it comes to economic development and attracting businesses and individuals to the state.
 
-This book is your visual guide to these different ways of understanding the federal income tax. In over forty charts, we lay out a picture of income in America and of the income tax’s economic and social effects.
+Each piece of North Carolina’s new tax code tells a story, and we know how important it is to put that story into a larger context. We hope that this book will help put these pieces together to provide an in-depth picture of the new, improved North Carolina.
 
-In addition, this book provides background on some of the key issues of the tax reform debate. How progressive is the federal income tax? How does it affect decisions about work, saving, and marriage? What is its effect on the U.S. economy? This book provides insight into each of these questions and several more.
-
-As tax reform becomes an increasingly important national topic of discussion, our hope is to arm citizens and lawmakers with the facts necessary for an honest and productive debate.
+> These charts were created and compiled by Tax Foundation Economist Liz Malm in collaboration with Tax Foundation staff.
