--- a/_slides/01-00.md
+++ b/_slides/01-00.md
@@ -1,16 +1,10 @@
 ---
-title: "CHAPTER 1"
-subtitle: "An Overview of the Federal Tax System"
-color: blue
+title: "PART 1"
+subtitle: "North Carolina Before"
+color: teal
 page: chapter
 background: chapter1.jpg
 ---
-Today, the individual income tax is the single most important source of federal revenue, but it wasn’t always that way. In 1936, excise taxes, such as tobacco and alcohol taxes, brought in more money than any other revenue source. Then, in 1943, the corporate income tax briefly became the most important source of federal revenue.
+Before its major tax overhaul, North Carolina was a state with a surprisingly high tax burden compared to its neighbors, coupled with a poorly structured tax code. Pre-reform, the Tar Heel State’s tax system ranked 44th in the country—meaning that only six states had less-competitive tax codes than North Carolina.
 
-But since the end of World War II, the story of American tax policy has been the rising importance of taxes on individual income. Today, 47 percent of all federal revenue comes from the individual income tax, while payroll taxes account for another 33 percent.
-
-As the individual income tax has become more important, it has also grown more complicated. In the last fifty years, the length of the tax code and associated regulations has almost tripled. Individual taxpayers now spend billions of hours every year complying with income tax filing requirements.
-
-The most important cause of the complexity of the income tax is the ever-growing tangle of credits, deductions, and other special provisions in the tax code. Justified or not, these credits and deductions reduce Americans' tax payments by over $1 trillion every year.
-
-So, the individual income tax is both very important and poorly-constructed. It is this combination that makes the income tax such a promising target for reform.
+In this chapter, we introduce North Carolina and the six key states we’ve identified as economic competitors for attracting people and business. We briefly walk through each state’s economy before explaining the relative tax structure of each—including how they compare nationally and also to one another. We’ll examine the relative tax burden of each state and delve into how North Carolina’s tax code functioned prior to the implementation of the ongoing multi-year tax reform. Finally, we’ll explore some key details about the North Carolina economy, including how it has fared over the business cycle, what kinds of jobs North Carolinians have, trends in disposable income, and geographic migration patterns.
