--- a/_slides/01-01.md
+++ b/_slides/01-01.md
@@ -1,13 +1,51 @@
 ---
-title: "Almost Half of Federal Revenue Comes from Individual Income Taxes"
-subtitle: "Composition of Federal Revenue, Billions of Dollars, 2015 (Estimated)"
-chart: 1-1.png
-chart_layout: square
+title: "Economic Snapshot: North Carolina and Six Competitors"
 ---
-Eight out of every ten dollars that the federal government collects come from just two sources: individual income taxes and payroll taxes. Individual income taxes are paid by households each April, while payroll taxes are removed automatically from employees' paychecks. Together, these taxes raise $2.5 trillion every year. The other three major sources of federal revenue - corporate income taxes, excise taxes, and estate taxes - are much less significant, raising only about $440 billion. Besides taxes, the federal government also collects a small amount of money from fines, fees, tariffs on overseas trade, and the income of the Federal Reserve.
+<style>
+@media (min-width: 1080px) {
+  .state-blurb {
+    flex: 1 30%;
+  }
+}
+</style>
+<div style="align-items:stretch;display:flex;flex-flow:row wrap;">
+  <div style="flex:3 100%">
+    <p style="font-weight:700;color:#4caf50;">North Carolina</p>
 
-```
-In 2015, 47.4 percent of federal revenue came from individual income taxes, for a total of $1.5 trillion.
-```
+    <p>With the ninth largest state economy in the U.S., North Carolina’s production depends the most on financial activities, such as real estate, finance, and insurance. However, manufacturing has a significantly above-average presence in North Carolina and is the second largest sector in the state. Government, professional and business services, and education and healthcare also contribute heavily to the state economy. Surprisingly, agriculture is the second smallest sector (only larger than mining), comprising just 1.1 percent of total state production.</p>
+  </div>
+  <div class="state-blurb">
+    <p style="font-weight:700;color:#ff9800;">Florida</p>
 
-> Source: Congressional Budget Office, *[The Budget and Economic Outlook: 2015 to 2025 (January 2015)](https://www.cbo.gov/publication/45010)*.
+    <p>Florida has the fourth largest economy in the country, but it’s more focused on services than the North Carolina economy. The state’s largest sector is real estate and other financial activities, followed by professional and business services, government, education and healthcare, and retail trade.</p>
+  </div>
+  <div class="state-blurb">
+    <p style="font-weight:700;color:#f44336;">Georgia</p>
+
+    <p>Georgia’s economy (at 10th largest in the U.S.) is similar in both size and composition to North Carolina’s. Dominated by finance-related activities, Georgia also has a strong manufacturing sector, the fourth largest sector in the state. Georgia’s economy also relies heavily on professional and business services, government, and wholesale trade.</p>
+  </div>
+  <div class="state-blurb">
+    <p style="font-weight:700;color:#2196f3;">Massachusetts</p>
+
+    <p>Massachusetts has a slightly smaller economy than North Carolina, at 12th largest in the U.S., though the sector breakdowns within the states are similar. The top five industries in Massachusetts are financial activities, professional and business services, education and healthcare, government, and manufacturing.</p>
+  </div>
+  <div class="state-blurb">
+    <p style="font-weight:700;color:#673ab7;">South Carolina</p>
+
+    <p>South Carolina’s economy is the smallest of the seven states we’ve chosen to compare, coming in at 27th largest in the country. The state’s top industries are nearly identical to North Carolina’s: the largest sector is financial activities, followed by manufacturing, government, professional and business services, and retail trade.</p>
+  </div>
+  <div class="state-blurb">
+    <p style="font-weight:700;color:#00bcd4;">Texas</p>
+
+    <p>The Texas economy is the country’s second largest, and is more than three times larger than North Carolina’s. Texas is heavily focused on goods production, with manufacturing and mining being the two largest sectors. After these, Texas depends heavily on financial activities, professional and business services, and government.</p>
+  </div>
+  <div class="state-blurb">
+    <p style="font-weight:700;color:#ffc107;">Virginia</p>
+
+    <p>Like Georgia and Massachusetts, Virginia has an economy similar to North Carolina’s in size, at 11th largest in the country. The state depends on services including finance and real estate, government, professional and business services, and education and health services, though manufacturing is still the fourth largest industry in the state.</p>
+  </div>
+</div>
+
+> Note: Financial activities includes real estate.
+>
+> Source: Bureau of Economic Analysis, *Gross Domestic Product (GDP) by State*, “GDP in current dollars.”
