Add remaining pages of part 1

--- a/_slides/01-01.md
+++ b/_slides/01-01.md
@@ -5,6 +5,7 @@ title: "Economic Snapshot: North Carolina and Six Competitors"
 @media (min-width: 1080px) {
   .state-blurb {
     flex: 1 30%;
+    padding-right: 20px;
   }
 }
 </style>
